# deploy_ml_api_flask

./: README.md  p1_api.py  pyproject.toml
__MACOSX/: ._modelos  ._p1_deploy.py  ._p1_modelo.py  ._templates  ._versoes.py
__MACOSX/modelos/: ._modelo_logistica.pkl  ._transformador_tipo_embalagem.pkl  ._transformador_tipo_produto.pkl
__MACOSX/templates/: ._template.html
modelos/: modelo_logistica.pkl  transformador_tipo_embalagem.pkl  transformador_tipo_produto.pkl
